changes made to playbooks

--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -10,22 +10,19 @@
         name: wireshark
         state: latest
 
-    - name: create directory and file
+    - name: create directory
       file:
-        path: /var/www/html/mydir/myfile.txt
+        path: /home/mydir
+        state: directory
+    
+    - name: create a file
+      file:
+        path: /home/mydir/file.txt
         state: touch
-        mode: '0644'
-        owner: apache
-        group: apache
 
     - name: change timezone
       timezone:
         name: America/New_York
-
-    - name: run shell script
-      shell: /path/to/my/script.sh
-      args:
-        chdir: /path/to/my/script/dir/
 # ------------------------------------------------------------------
 - name: update LB server
   hosts: lb
@@ -42,20 +39,19 @@
         name: wireshark
         state: latest
 
-    - name: create directory and file
+    - name: create directory
       file:
-        path: /var/www/html/mydir/myfile.txt
+        path: /home/mydir
+        state: directory
+    
+    - name: create a file
+      file:
+        path: /home/mydir/file.txt
         state: touch
-        mode: '0644'
-        owner: apache
-        group: apache
 
     - name: change timezone
       timezone:
         name: America/New_York
-
-    - name: run shell script
-      shell: /path/to/my/script.sh
-      args:
-        chdir: /path/to/my/script/dir/
 ...
+
+
