--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,3 +1,3 @@
 ---
 - hosts: all
-- import_playboook: ../static_assignments/common-del.yml
+- import_playbook: ../static_assignments/common-del.yml
