--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -3,4 +3,4 @@
 #- import_playbook: /ansible-conf-mangt-P11/static-assignments/common-del.yml
 
 - hosts: uat-webservers
-- import_playbook: /ansible-conf-mangt-P11/static-assignments/uat-webservers.yml
+- import_playbook: ../static-assignments/uat-webservers.yml
