--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -2,5 +2,18 @@
 #- hosts: all
 #- import_playbook: /ansible-conf-mangt-P11/static-assignments/common-del.yml
 
-- hosts: uat-webservers
-- import_playbook: ../static-assignments/uat-webservers.yml
+#- hosts: uat-webservers
+#- import_playbook: ../static-assignments/uat-webservers.yml
+
+---
+- hosts: all
+- name: Include dynamic variables 
+  tasks:
+  import_playbook: ../static-assignments/common.yml 
+  include: ../dynamic-assignments/env-vars.yml
+  tags:
+    - always
+
+- hosts: webservers
+- name: Webserver assignment
+  import_playbook: ../static-assignments/webservers.yml
