--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -82,12 +82,21 @@ nginx_upstreams:
  - name: myapp1
    strategy: "ip_hash" # "least_conn", etc.
    keepalive: 16 # optional
-   servers:
-     - "172.31.15.219 weight=3"
-     - "172.31.14.201 weight=3"
+   servers:{
+    "web1 weight=3"
+    "web2 weight=3"
+    "proy_pass http://myapp1"
+   }
 
 
 nginx_log_format: |-
   '$remote_addr - $remote_user [$time_local] "$request" '
   '$status $body_bytes_sent "$http_referer" '
   '"$http_user_agent" "$http_x_forwarded_for"'
+
+
+
+
+enable_nginx_lb: false 
+load_balancer_is_required: false
+
