--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -4,10 +4,10 @@
 
 
 # Setup/install tasks.
-- ansible.builtin.include_tasks: setup-RedHat.yml
+- include_tasks: setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
 
-- ansible.builtin.include_tasks: setup-Debian.yml
+- include_tasks: setup-Debian.yml
   when: ansible_os_family == 'Debian'
 
 - ansible.builtin.include_tasks: setup-Archlinux.yml
@@ -20,8 +20,8 @@
       or (arch_mysql_install_packages is defined and arch_mysql_install_packages.changed) }}"
 
 # Configure MySQL.
-- ansible.builtin.include_tasks: configure.yml
-- ansible.builtin.include_tasks: secure-installation.yml
-- ansible.builtin.include_tasks: databases.yml
-- ansible.builtin.include_tasks: users.yml
-- ansible.builtin.include_tasks: replication.yml
+- include_tasks: configure.yml
+- include_tasks: secure-installation.yml
+- include_tasks: databases.yml
+- include_tasks: users.yml
+- include_tasks: replication.yml
