--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -82,11 +82,11 @@ nginx_upstreams:
  - name: myapp1
    strategy: "ip_hash" # "least_conn", etc.
    keepalive: 16 # optional
-   servers:{
-    "web1 weight=3"
-    "web2 weight=3"
-    "proy_pass http://myapp1"
-   }
+   servers:
+    - "web1 weight=3"
+    - "web2 weight=3"
+    - proxy_pass http://myapp1"
+   
 
 
 nginx_log_format: |-
