--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -25,7 +25,7 @@
     - always
 
 - name: Include env-vars file
-  include_playbook: ../dynamic-assignments/env-vars.yml
+  import_playbook: ../dynamic-assignments/env-vars.yml
   tags:
     - always
 
