--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -18,12 +18,13 @@
 #  tags:
 #    - always
 
----
-- name: import common file
-  import_playbook: ../static-assignments/common.yml
-  tags:
-    - always
+#---
+#- name: import common file
+#  import_playbook: ../static-assignments/common.yml
+#  tags:
+#    - always
 
+---
 - name: Include env-vars file
   import_playbook: ../dynamic-assignments/env-vars.yml
   tags:
@@ -38,4 +39,6 @@
 - name: Loadbalancers assignment
   import_playbook: ../static-assignments/loadbalancers.yml
   when: load_balancer_is_required
+...
+
 
