--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -78,15 +78,35 @@ nginx_vhosts: []
 #   template: "" # Can be used to override the `nginx_vhost_template` per host.
 #   state: "absent" # To remove the vhost configuration.
 
-nginx_upstreams:
- - name: myapp1
-   strategy: "ip_hash" # "least_conn", etc.
-   keepalive: 16 # optional
-   servers:
-    - "web1 weight=3"
-    - "web2 weight=3"
-    - proxy_pass http://myapp1"
+#nginx_upstreams:
+# - name: myapp1
+#   strategy: "ip_hash" # "least_conn", etc.
+#   keepalive: 16 # optional
+#   servers:
+#    - "web1 weight=3"
+#    - "web2 weight=3"
+#    - proxy_pass http://myapp1"
+
+upstream myapp1 {
+      server  web1 172.31.15.219 weight=5; 
+      server  web2 172.31.14.201 weight=5;
+      
+   }
+
+   # This server accepts all traffic to port 80 and passes it to the upstream. 
+   # Notice that the upstream name and the proxy_pass need to match.
+
+   server {
+      listen 80; 
+
+      location / {
+          proxy_pass http://myapp1;
+      }
+   }
+
+
    
+
 
 
 nginx_log_format: |-
