--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -92,9 +92,9 @@ nginx_vhosts: []
 #    - proxy_pass http://myapp1"
 
 
-upstream myapp1 {
-  server web1 172.31.15.219 weight=5; 
-  server web2 172.31.14.201 weight=5;
+nginx_upstream myapp1 {
+  server web1 172.31.15.219 weight=3;
+  server web2 172.31.14.201 weight=3;
 }
 
 
