--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -93,8 +93,8 @@ nginx_vhosts: []
 
 
 nginx_upstream myapp1 {
-  server web1 172.31.15.219 weight=3;
-  server web2 172.31.14.201 weight=3;
+  server 172.31.15.219 weight=3;
+  server 172.31.14.201 weight=3;
 }
 
 
