--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -1,11 +1,6 @@
 ---
-- name: restart nginx
-  service: name=nginx state=restarted
-
-- name: validate nginx configuration
-  command: nginx -t -c /etc/nginx/nginx.conf
-  changed_when: false
-
-- name: reload nginx
-  service: name=nginx state=reloaded
-  when: nginx_service_state == "started"
+- name: Restart nginx service
+  become: yes
+  service:
+    name: nginx
+    state: restarted
