--- a/roles/mysql/tasks/configure.yml
+++ b/roles/mysql/tasks/configure.yml
@@ -25,7 +25,7 @@
   when: mysql_config_include_files | length
 
 - name: Copy my.cnf override files into include directory.
-  ansible.builtin.template:
+  template:
     src: "{{ item.src }}"
     dest: "{{ mysql_config_include_dir }}/{{ item.src | basename }}"
     owner: root
